Fix PMD errors